# rainay_is_smart

./: .gitignore  app.py  database.py  example.py  ftp.py  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  request.http  requirements.txt  service-account-key.json  tsconfig.json  utils.py  uwsgi.ini  vendosync.sql  webpack.config.js
control/: flask_server.html  install_package.php  recreate_env.php  show_logs.php  start_flask.php  stop_flask.php  test.php
python/: app.py  database.py  error_routes.py  googlemaps.py  item_routes.py  procurement_routes.py  report_routes.py  response.py  rfq_routes.py  schema.py  scrap_gred.py  test.py  user_routes.py  utils.py  vendor_routes.py
src/js/: account.ts  auth.ts  authentication.js  chart-options.ts  content_switcher.js  dashboard.js  dashboard.ts  dev_dashboard.js  dev_dashboard.ts  exec_dashboard.js  forgot_password.js  index.js  index.ts  index1.js  item.js  item.ts  login.js  login.ts  main.js  mgr_dashboard.js  procurement.js  procurement.ts  profile.js  profile.ts  purchase.js  quotation.ts  reception.js  register.js  register.ts  report.ts  rfq.js  sidebar.js  socket.ts  test.js  user_manual.js  users.ts  utils.ts  vendor.js  vendor.ts  vendor_management.js
src/style/: auth.scss  custom_theme.scss  dashboard.css  dashboard.scss  dev_dashboard.scss  mgr_dashboard.scss  vendor_management.scss
src/templates/: account.html  company_email.html  company_email.mjml  dashboard.html  error.html  (+27 more)
templates/: developer_login.html  example.html  index.html  login.html  register.html  users.html
(+12 files in other folders)
